# recomender_engine_cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  config.json  generate_test_data.py  prepare_build.py  process_amazon_data.py  process_magazine_data.py  requirements.txt  setup_and_process.bat  test_recommend.py  train_model.py
include/: loader.hpp  recommender.hpp  utils.hpp
src/: loader.cpp  main.cpp  recommender.cpp  utils.cpp
tests/: test_recommender.cpp
web/: app.py  requirements.txt
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
